Specify width of image wrapper on art archive to (hopefully) resolve image overflow issue on Windows browsers.

--- a/_sass/sscummings/templates/_archive-art.scss
+++ b/_sass/sscummings/templates/_archive-art.scss
@@ -14,6 +14,10 @@
 			width: 100%;
 			display: flex;
 			justify-content: center;
+
+			.image-wrapper {
+				width: 100%;
+			}
 		}
 
 		@include mq-down($md-down) {
